# libv-core

./: CMakeLists.txt  README.md  public.cmake.in
public/share/libv/: libvConfig.cmake
public/share/libv/core/: FindCImg.cmake  FindDoxygen.cmake  FindEigen.cmake  FindV4L1.cmake  FindV4L2.cmake  Finddc1394.cmake  Findffmpeg.cmake  Findffmpeg_avcodec.cmake  Findffmpeg_avformat.cmake  Findffmpeg_avutil.cmake  Findffmpeg_swscale.cmake  Findlibv.cmake.in  Findraw1394.cmake  Findtinyxml.cmake  doxyfile.ini  doxyfile.ini.in  function_libv_find_package.cmake  libvConfig.cmake.in  libv_configure_executable.cmake  libv_configure_library.cmake  libv_generate_all.hpp.cmake  libv_generate_config.cmake.cmake  libv_generate_doc.cmake  libv_generate_version.hpp.cmake  libv_preamble.cmake  libv_testing.cmake  libv_use_qt.cmake  version.hpp.in
src/: build.dox  git.dox  libv_build.dox  libv_build_app.dox  libv_build_lib.dox  style.dox
src/doc/modules/: image.dox  logger.dox
src/libv/core/: auto_load.cpp  auto_load.hpp  global.hpp  logger.hpp  path.cpp  path.hpp  pipeline.hpp  shared_queue.hpp  time.hpp  uri_parser.hpp
src/libv/core/conversions/: frameserver.hpp  opencv.hpp  qt.hpp
src/libv/core/image/: image.hpp  io.cpp  iterator.hpp  traversal.hpp  types.hpp
src/libv/core/memory/: aligned_allocator.hpp  opaque_pointer.hpp
src/libv/core/serialization/: contiguous_containers.hpp  eigen.hpp  opencv.hpp  serializable.cpp  serializable.hpp
tests/: config.cpp  pipeline.cpp  shared_queue.cpp  shared_queue_single_reader.cpp
tests/image/: concepts.cpp  crop.cpp  iterators.cpp
(+6 files in other folders)
